--- a/style.css
+++ b/style.css
@@ -1,64 +1,47 @@
-
 body,
 html {
   width: 100%;
-  height: 100%; 
+  height: 100%;
+  font-family: 'Montserrat', sans-serif;
+  background: url(header.jpg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
-body {
-  font-family: 'Montserrat', sans-serif;
+h1 {
+  font-size: 3rem;
+  color: #e2dbdb;
+}
+
+.buffer {
+  height: 10rem;
 }
 
 hr {
-  max-width: 65px;
+  background-color: #F05F44;
   border-width: 3px;
-  border-color: #F05F44; 
-}
-
-.faded {
-  color: rgba(255, 255, 255, 0.8); 
-}
-
-header.startup {
-  background-position: center;
-  background-image: url("header.jpg");
-  background-size: cover;
-  height: 100%;
-}
-
-header.startup hr {
-  margin-top: 200px;
-  margin-bottom: 30px; 
-}
-
-header.startup h1 {
-  font-size: 2rem; 
+  max-width: 65px;
 }
 
 .btn {
   font-weight: 700;
-  text-transform: uppercase;
   border-radius: 300px;
-  font-family: 'Montserrat', sans-serif;
-  position: relative;
-}
-
-.btn-xl {
-  padding: 1rem 2rem; 
+  text-transform: uppercase;
 }
 
 .btn-primary {
   background-color: #F05F44;
-  border-color: #F05F44; }
+  border-color: #F05F44;
+}
 
 .btn-primary:hover {
   background-color: #ee4b08;
   border-color: #ee4b08;
-  border-width: 5px;
-  cursor: pointer;
+  border-width: 4px;
 }
 
-#mc_embed_signup_scroll {
-  text-align: center;
+.btn-xl {
+  padding: 1rem 2rem;
 }
-  
